--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
-    "start": "node dist/app.js",
+    "start": "NODE_ENV=production node dist/app.js",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop lfit-admin-api",
     "pm2:restart": "pm2 restart lfit-admin-api",
