--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,8 @@
     "dev": "PORT=3080 next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pm2:start": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
